styling: reducing margin-bottom of .basix-form fieldset to avoid unnecessary vertical scrollbar on the main screen

--- a/src/renderer/src/assets/style.css
+++ b/src/renderer/src/assets/style.css
@@ -19,7 +19,7 @@ a.timeline-link {
 }
 
 .basic-form fieldset {
-  margin-bottom: 20px;
+  margin-bottom: 12px;
   padding-right: 20px;
 }
 
